@@ -10,9 +10,11 @@ x <- glSim(n.ind = 10, n.snp.nonstruc = 5e2, n.snp.struc = 5e2, ploidy = 2,
 
 test_that("win.ia will throw an error if duplicate positions are found", {
   options(poppr.debug = TRUE)
-  expect_output(x.naive     <- win.ia(x), "[|=]{2,}")
-  position(x) <- chrom_pos
+  expect_output(x.naive     <- win.ia(x, name_window = TRUE), "[|=]{2,}")
   expect_equal(length(x.naive), 10L)
+  expect_named(x.naive, as.character(100 * (1:10)))
+  expect_null(names(win.ia(x, quiet = TRUE, name_window = FALSE)))
+  position(x) <- chrom_pos
   expect_error(win.ia(x), "chromosome")
   options(poppr.debug = FALSE)
 })  
@@ -27,7 +29,8 @@ test_that("win.ia will use chromosome structure", {
   chromosome(x) <- chromo
   x.chrom.bt    <- win.ia(x, quiet = TRUE)
   expect_equal(length(x.chrom.bt), 100L)
-  expect_equal(names(x.chrom.bt), as.character(rep(1:10, each = 10)))
+  winnames <- paste(rep(1:10, each = 10), rep(100*(1:10), 10), sep = ".")
+  expect_equal(names(x.chrom.bt), winnames)
 })
   
 test_that("win.ia will always start at the beginning of the chromosome", {
